@@ -28,14 +28,14 @@ The location of Berkeley DB may also be specified using
 the environment. With Visual C++, the variables LIB and INCLUDE
 can be used.
 
-By default, DuroDBMS is installed in C:\duro.0.26 on Windows, and
-/usr/local/duro.0.26 on all other systems.
+By default, DuroDBMS is installed in C:\duro.1.0 on Windows, and
+/usr/local/duro.1.0 on all other systems.
 You can specify a different directory by passing an installdir
 variable to scons, e. g.:
 
 scons installdir=/usr install
 
-This will install DuroDBMS in /usr/duro.0.26.
+This will install DuroDBMS in /usr/duro.1.0
 
 To build DuroDBMS without Tcl support, use:
 
