@@ -29,7 +29,7 @@ The Tcl interface can be found in the 'lib' subdirectory.
 The easiest way to make it available to application
 scripts is to add this subdirectory to TCLLIBPATH, e.g.:
 
-    set TCLLIBPATH=C:/durodbms.0.26/lib
+    set TCLLIBPATH=C:/durodbms.1.0/lib
 
 DuroDBMS is still under development. Report bugs to
 rhartmann@users.sourceforge.net or use a Sourceforge tracker
