@@ -48,7 +48,7 @@ for more information on <cite>TTM</cite> and Tutorial D.
 
 <pre>
 durodt
-Duro D/T library version 0.26
+Duro D/T library version 1.0
 Implicit transactions enabled.
 no db>
 </pre>
