@@ -42,7 +42,7 @@ A value of FALSE indicates that an error occured and the program should exit.
 <p>A tiny example program:
 
 <pre>
-#!/usr/local/durodbms.0.26/bin/fcgi_durodt
+#!/usr/local/durodbms.1.0/bin/fcgi_durodt
 
 var request_accepted boolean;
 var counter init 0;
@@ -74,7 +74,7 @@ The programm accesses the database <var>D</var>
 stored in the database environment <var>/var/db/dbenv</var>.
 
 <pre>
-#!/usr/local/durodbms.0.26/bin/fcgi_durodt
+#!/usr/local/durodbms.1.0/bin/fcgi_durodt
 
 connect('/var/db/dbenv');
 current_db := 'D';
