@@ -2,6 +2,8 @@ Summary of Changes to DuroDBMS
 
 DuroDBMS 1.0
 
+- Made datetime type ordered.
+
 - Fixed bug in RDB_drop_table_index().
 
 DuroDBMS 0.26
